--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                         
                       
                         <div class="w3-container">
-                            <p><i class="fas fa-globe fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Website</span></i>vpnmahawar.in</p>
+                            <p><i class="fas fa-globe fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Website</span></i>vpnmahawar.site</p>
                             <p><i class="fas fa-home fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Hometown</span></i>Dausa, Rajasthan (INDIA)</p>
                             <p><i class="fas fa-envelope fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Mail</span></i>vpnmahawar@gmail.com</p>
-                            <p><i class="fas fa-phone fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Contact Number</span></i>+91-8107222016</p>
-                            <p><i class="fab fa-whatsapp fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Whatsapp Number</span></i>+91-7062016031</p>
+                            <p><i class="fas fa-phone fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Contact Number</span></i>+91-8005989031</p>
+<!--                             <p><i class="fab fa-whatsapp fa-fw w3-margin-right w3-large w3-text-teal tooltip"><span class="tooltiptext">Whatsapp Number</span></i>+91-7062016031</p> -->
                             <hr>
 
                             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
@@ -170,13 +170,6 @@
                             <p>Scanning, Enumeration, Sniffing, Social Engineering, Denial-of-Service, Session Hijacking, SQL Injection etc.</p>
                             <hr>
                         </div>
-                        <!--
-                        <div class="w3-container">
-                          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-                          <h6 class="w3-text-teal"><i class="fa fa-calendar-alt fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
-                        </div>
-                        -->
                     </div>
 
                     <br>
